Scrollbar fix
Firefox must have changed something that is causing scrollbars to appear when they shouldn't. This removes them entirely.

--- a/twitch.css
+++ b/twitch.css
@@ -7,6 +7,7 @@ html {
 body {
 	background: black;
 	margin: 0px;
+	overflow: hidden;
 }
 div.iframe {
 	background: transparent;
